<resources>
    <string name="app_name">tictactoe</string>

    <string name="protocol">https://</string>
    <string name="domain">generic-game-service.herokuapp.com</string>
    <string name="base_path">/Game</string>
    <string name="create_game_path">/</string>
    <string name="join_game_path">/%1s/join</string>
    <string name="poll_game_path">/%1s/poll</string>
    <string name="update_game_path">/%1s/update</string>
    <string name="game_service_key">OzvIa676yG</string>



    <string name="tre_pa_rad_logo">Tre på rad logo</string>
    <string name="knots_and_crosses">Knots and Crosses</string>
    <string name="start">Start</string>
    <string name="join">Join</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_name">Player name</string>
    <string name="tic_tac_toe">Tic tac toe</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_game_id">enter game id</string>


</resources>