<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/Black">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="80sp"
        android:textColor="@color/Cyan"
        android:text="@string/tic_tac_toe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        android:paddingTop="100dp"
        >

        <LinearLayout
            android:id="@+id/startGameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toBottomOf="@id/joinGameButton"
            app:layout_constraintTop_toTopOf="@id/title">


            <EditText
                android:id="@+id/playerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_gravity="center"
                android:textColor="@color/Cyan"
                android:textColorHint="@color/Cyan"
                android:backgroundTint="@color/Cyan"/>

            <Button
                android:id="@+id/startGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/Cyan"
                android:textColor="@color/DarkGreen"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/joinGameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/startGameButton"
            android:layout_marginTop="60dp"
            >

            <EditText
                android:id="@+id/gameId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_game_id"
                app:layout_constraintTop_toTopOf="@id/joinGameLayout"
                app:layout_constraintTop_toBottomOf="@id/joinGameButton"
                android:textColor="@color/Cyan"
                android:textColorHint="@color/Cyan"
                android:backgroundTint="@color/Cyan"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/joinGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join"
                app:layout_constraintTop_toTopOf="@id/gameId"
                app:layout_constraintTop_toBottomOf="parent"
                android:layout_gravity="center"
                android:backgroundTint="@color/Cyan"
                android:textColor="@color/DarkGreen"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>